# TinyPlay

./: .gitignore  .gitmodules  CMakeLists.txt  data.js  img2h  lorem.txt  main.js  main2.js  map.js  module.js  package-lock.json  preamble.js  promise.js  rot.js  sample_rot.js  strings.js  terrain.js  tilemap.js  timers.js
assets/: map1.tmj  myfont.fnt  project.tiled-session  tileset.tsj
cmake/: FindEGL.cmake  FindOpenGLES2.cmake  FindSDL2.cmake  bin2h.cmake
examples/rogue/: api.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/rogue/src/: main.ts  map.ts
examples/rogue/src/data/: terrain.ts
examples/typescript/: api.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/typescript/src/: main.ts  module.ts
src/: font.h  kenney_1bit.h  kenney_pixel.h  main.c  trogue.h
tools/img2h/: main.c
